--- a/analysis/TCC.Rmd
+++ b/analysis/TCC.Rmd
@@ -72,9 +72,9 @@ CCSize
 ```{r TC1 Obtendo os resultados de DARwin e separando os resultados, eval = FALSE}
 SelDARwin <- read.table(here::here("output","MatrizGowerCarolineTC1.DON"),
                              sep = "\t", header = T, skip = 2,
-                             nrows = 809)
-table(SelDARwin$CCSel)
-ClonesSel <- SelDARwin %>% filter(CCSel == "Kept") %>%
+                             nrows = 1825)
+table(SelDARwin$Tree.Sample_93)
+ClonesSel <- SelDARwin %>% filter(Tree.Sample_93 == "Kept") %>%
   select(Name)
 DataCarTCC1Pheno3 <- TC1Data[TC1Data$id%in%ClonesSel$Name,]
 
@@ -131,8 +131,8 @@ CCSize
 SelDARwin <- read.table(here::here("output","MatrizGowerCarolineTC2.DON"),
                              sep = "\t", header = T, skip = 2,
                              nrows = 809)
-table(SelDARwin$CCSel)
-ClonesSel <- SelDARwin %>% filter(CCSel == "Kept") %>%
+table(SelDARwin$Tree.Sample_157)
+ClonesSel <- SelDARwin %>% filter(Tree.Sample_157 == "Kept") %>%
   select(Name)
 DataCarTCC2Pheno3 <- TC2Data[TC2Data$id%in%ClonesSel$Name,]
 
@@ -189,8 +189,8 @@ CCSize
 SelDARwin <- read.table(here::here("output","MatrizGowerCarolineTC3.DON"),
                              sep = "\t", header = T, skip = 2,
                              nrows = 809)
-table(SelDARwin$CCSel)
-ClonesSel <- SelDARwin %>% filter(CCSel == "Kept") %>%
+table(SelDARwin$Tree.Sample_182)
+ClonesSel <- SelDARwin %>% filter(Tree.Sample_182 == "Kept") %>%
   select(Name)
 DataCarTCC3Pheno3 <- TC3Data[TC3Data$id%in%ClonesSel$Name,]
 
