--- a/analysis/TCC.Rmd
+++ b/analysis/TCC.Rmd
@@ -10,6 +10,7 @@ editor_options:
 ## Coleções Nucleares Fenotípicas Temáticas
 
 ```{r lendo dados fenotipicos, eval = FALSE}
+library(tidyverse)
 ## Temática 1 - Produtividade de Raízes
 TC1Data <- readRDS(file = here::here("output", "TCC1Data.rds")) %>% as.data.frame
 
@@ -130,9 +131,9 @@ CCSize
 ```{r TC2 Obtendo os resultados de DARwin e separando os resultados, eval = FALSE}
 SelDARwin <- read.table(here::here("output","MatrizGowerCarolineTC2.DON"),
                              sep = "\t", header = T, skip = 2,
-                             nrows = 809)
-table(SelDARwin$Tree.Sample_157)
-ClonesSel <- SelDARwin %>% filter(Tree.Sample_157 == "Kept") %>%
+                             nrows = 1712)
+table(SelDARwin$Tree.Sample_93)
+ClonesSel <- SelDARwin %>% filter(Tree.Sample_93 == "Kept") %>%
   select(Name)
 DataCarTCC2Pheno3 <- TC2Data[TC2Data$id%in%ClonesSel$Name,]
 
@@ -188,12 +189,19 @@ CCSize
 ```{r TC3 Obtendo os resultados de DARwin e separando os resultados, eval = FALSE}
 SelDARwin <- read.table(here::here("output","MatrizGowerCarolineTC3.DON"),
                              sep = "\t", header = T, skip = 2,
-                             nrows = 809)
-table(SelDARwin$Tree.Sample_182)
-ClonesSel <- SelDARwin %>% filter(Tree.Sample_182 == "Kept") %>%
+                             nrows = 1864)
+table(SelDARwin$Tree.Sample_93)
+ClonesSel <- SelDARwin %>% filter(Tree.Sample_93 == "Kept") %>%
   select(Name)
 DataCarTCC3Pheno3 <- TC3Data[TC3Data$id%in%ClonesSel$Name,]
 
 write.table(DataCarTCC3Pheno3, file= here::here("output", "TC3C", "DadosTC3Pheno3.csv"),
             quote = F, sep = ";", dec = ".")
 ```
+
+
+Back - [Dados Fenotípicos - Seleção](PhenoData.html)
+
+Next - [Análises Discriminantes](AnDis.html)
+
+[Home](index.html)
